--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ListaDeTarefas",
-    "slug": "ListaDeTarefas",
+    "name": "bookstore",
+    "slug": "bookstore",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -18,7 +18,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.leonardo.bragatti.bookstore"
     },
     "web": {
       "favicon": "./assets/favicon.png"
